# spherical_averages

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_init.bat  cmake_init.sh
doc/: SphericalAveragesについて.md
include/: AlignedVector.hpp  SphAvg.hpp  SphAvgGD.hpp  SphAvgLBFGS.hpp  SphAvgLBFGS_align.hpp  spherical_average_lbfgs.h
python/: sph_avg.py  sph_avg_old.py
test/: test_beatrice_benchmark.cpp  test_for_beatrice.cpp  test_sph_avg.cpp
